--- a/src/lib/locales/mr.json
+++ b/src/lib/locales/mr.json
@@ -64,6 +64,7 @@
         "menu_support": "समर्थन",
         "menu_live_studio": "लाइव्ह स्टुडिओ",
         "menu_requests": "फॉलो विनंत्या",
+        "menu_cart": "शॉपिंग कार्ट",
         "account_menu_label": "माझे खाते",
         "account_menu_verify": "खाते सत्यापित करा",
         "account_menu_profile": "प्रोफाइल",
@@ -184,5 +185,16 @@
                 }
             ]
         }
+    },
+    "cart_page": {
+        "title": "तुमची शॉपिंग कार्ट",
+        "empty_title": "तुमची कार्ट रिकामी आहे",
+        "empty_description": "तुम्ही अद्याप कोणतेही आयटम जोडलेले नाहीत असे दिसते. तुम्हाला आवडेल असे काहीतरी शोधण्यासाठी एक्सप्लोर करणे सुरू करा!",
+        "summary_title": "ऑर्डर सारांश",
+        "summary_description": "चेक आउट करण्यापूर्वी तुमच्या ऑर्डरचे पुनरावलोकन करा.",
+        "subtotal": "उप-एकूण",
+        "shipping": "शिपिंग",
+        "total": "एकूण",
+        "checkout_button": "चेकआउट करण्यासाठी पुढे जा"
     }
 }
