--- a/src/lib/locales/ta.json
+++ b/src/lib/locales/ta.json
@@ -1,7 +1,7 @@
 
 {
     "homepage": {
-        "title": "உங்கள் கைவினைக்கு AI மூலம் శక్తి அளியுங்கள்",
+        "title": "உங்கள் கைவினைக்கு AI மூலம் சக்தி அளியுங்கள்",
         "subtitle": "Artisan உங்கள் தனித்துவமான படைப்புகளை விவரிக்கவும், விவரிக்கவும் மற்றும் விற்கவும் உதவும் புத்திசாலித்தனமான கருவிகளை வழங்குகிறது. உங்கள் கலையில் கவனம் செலுத்துங்கள், நாங்கள் வார்த்தைகளைக் கையாளுவோம். கைவினைஞர்களுக்கு இந்த தளம் முற்றிலும் இலவசம்.",
         "artisans_button": "உருவாக்கத் தொடங்குங்கள்",
         "login": "உள்நுழை",
@@ -64,6 +64,7 @@
         "menu_support": "ஆதரவு",
         "menu_live_studio": "நேரடி ஸ்டுடியோ",
         "menu_requests": "பின்தொடர்தல் கோரிக்கைகள்",
+        "menu_cart": "ஷாப்பிங் கார்ட்",
         "account_menu_label": "என் கணக்கு",
         "account_menu_verify": "கணக்கைச் சரிபார்க்கவும்",
         "account_menu_profile": "சுயவிவரம்",
@@ -184,5 +185,16 @@
                 }
             ]
         }
+    },
+    "cart_page": {
+        "title": "உங்கள் ஷாப்பிங் கார்ட்",
+        "empty_title": "உங்கள் கார்ட் காலியாக உள்ளது",
+        "empty_description": "நீங்கள் இன்னும் எந்த பொருட்களையும் சேர்க்கவில்லை என்று தெரிகிறது. நீங்கள் விரும்பும் ஒன்றைக் கண்டுபிடிக்க ஆராயத் தொடங்குங்கள்!",
+        "summary_title": "ஆர்டர் சுருக்கம்",
+        "summary_description": "செக் அவுட் செய்வதற்கு முன் உங்கள் ஆர்டரை மதிப்பாய்வு செய்யவும்.",
+        "subtotal": "துணை మొత్తం",
+        "shipping": "ஷிப்பிங்",
+        "total": "மொத்தம்",
+        "checkout_button": "செக் அவுட்டிற்குச் செல்லவும்"
     }
 }
