--- a/src/lib/locales/te.json
+++ b/src/lib/locales/te.json
@@ -64,6 +64,7 @@
         "menu_support": "మద్దతు",
         "menu_live_studio": "లైవ్ స్టూడియో",
         "menu_requests": "ఫాలో అభ్యర్థనలు",
+        "menu_cart": "షాపింగ్ కార్ట్",
         "account_menu_label": "నా ఖాతా",
         "account_menu_verify": "ఖాతాను ధృవీకరించండి",
         "account_menu_profile": "ప్రొఫైల్",
@@ -184,5 +185,16 @@
                 }
             ]
         }
+    },
+    "cart_page": {
+        "title": "మీ షాపింగ్ కార్ట్",
+        "empty_title": "మీ కార్ట్ ఖాళీగా ఉంది",
+        "empty_description": "మీరు ఇంకా ఏ వస్తువులను జోడించనట్లు కనిపిస్తోంది. మీరు ఇష్టపడేదాన్ని కనుగొనడానికి అన్వేషించడం ప్రారంభించండి!",
+        "summary_title": "ఆర్డర్ సారాంశం",
+        "summary_description": "చెక్అవుట్ చేయడానికి ముందు మీ ఆర్డర్‌ను సమీక్షించండి.",
+        "subtotal": "ఉపమొత్తం",
+        "shipping": "షిప్పింగ్",
+        "total": "మొత్తం",
+        "checkout_button": "చెక్అవుట్‌కు కొనసాగండి"
     }
 }
