--- a/src/lib/locales/ur.json
+++ b/src/lib/locales/ur.json
@@ -19,7 +19,7 @@
         "art_title": "اگلی نسل کے لیے عصری ہندوستانی فن",
         "art_subtitle": "جدید ہندوستانی فنکاروں کو دریافت کریں جو ایک تازہ، متحرک نقطہ نظر کے ساتھ روایت کی نئی تعریف کر رہے ہیں۔",
         "art_1_title": "ڈیجیٹل افسانہ",
-        "art_1_desc": "قدیم کہانیاں ڈیجیٹل चित्रण کے ذریعے دوبارہ بیان کی گئیں، महाकाव्य कथाओं को आधुनिक सौंदर्यशास्त्र के साथ मिलाते हुए।",
+        "art_1_desc": "قدیم کہانیاں ڈیجیٹل चित्रण کے ذریعے دوبارہ بیان کی گئیں، महाकाव्य कथाओं को आधुनिक सौंदर्यशास्त्र کے ساتھ मिलाते हुए۔",
         "art_2_title": "انڈین اسٹریٹ آرٹ فیوژن",
         "art_2_desc": "ہندوستانی نقشوں سے مزین گرافٹی اور سٹینسل آرٹ، شہری کینوس پر بولڈ بیانات تخلیق کرتے ہیں۔",
         "art_3_title": "کم سے کم لوک",
@@ -185,6 +185,24 @@
                 }
             ]
         }
+    },
+    "suggestions_page": {
+        "title": "تجاویز کا خانہ",
+        "description": "آرٹیسن پلیٹ فارم کو بہتر بنانے میں ہماری مدد کے لیے اپنے خیالات کا اشتراک کریں۔",
+        "card_title": "اپنی رائے جمع کروائیں",
+        "card_description": "ہم آپ کے ان پٹ کی قدر کرتے ہیں۔ آپ کے ذہن میں کیا ہے؟",
+        "placeholder": "مثال کے طور پر، 'کاش فنکاروں کے پورٹ فولیو بنانے کا کوئی طریقہ ہوتا...'",
+        "button": "AI کے ساتھ فیڈ بیک کا تجزیہ کریں",
+        "analyzing": "تجزیہ کیا جا رہا ہے...",
+        "analysis_title": "AI فیڈ بیک تجزیہ",
+        "analysis_description": "ہمارا AI اس فیڈ بیک کے بارے میں کیا سوچتا ہے وہ یہ ہے۔",
+        "summary_title": "خلاصہ",
+        "no_feedback_title": "کوئی فیڈ بیک فراہم نہیں کیا گیا",
+        "no_feedback_description": "براہ کرم جمع کرانے سے پہلے اپنی تجویز درج کریں۔",
+        "success_title": "فیڈ بیک کا تجزیہ کیا گیا!",
+        "success_description": "AI نے تجویز پر کارروائی کی ہے۔",
+        "error_title": "تجزیہ ناکام",
+        "error_description": "فیڈ بیک کا تجزیہ کرنے میں ناکام۔ براہ کرم دوبارہ کوشش کریں"
     },
     "cart_page": {
         "title": "آپ کی شاپنگ کارٹ",
