dont show the artisans and buyers ,instead , lead them to different diff

--- a/src/lib/locales/bn.json
+++ b/src/lib/locales/bn.json
@@ -3,7 +3,7 @@
     "homepage": {
         "title": "আপনার শিল্পকে AI দিয়ে শক্তিশালী করুন",
         "subtitle": "Artisan আপনার অনন্য সৃষ্টি বর্ণনা করতে, বর্ণনা করতে এবং বিক্রি করতে সাহায্য করার জন্য বুদ্ধিমান সরঞ্জাম সরবরাহ করে। আপনার শিল্পে মনোযোগ দিন, আমরা শব্দগুলি পরিচালনা করব। কারিগরদের জন্য প্ল্যাটফর্মটি সম্পূর্ণ বিনামূল্যে।",
-        "artisans_button": "সৃষ্টি শুরু করুন",
+        "artisans_button": "আপনার যাত্রা শুরু করুন",
         "login": "লগইন",
         "signup": "সাইন আপ",
         "features_title": "আধুনিক কারিগরের জন্য বৈশিষ্ট্য",
@@ -36,7 +36,8 @@
         "form_placeholder": "artisan_priya / m@example.com / 9876543210",
         "password_label": "পাসওয়ার্ড",
         "forgot_password": "আপনার পাসওয়ার্ড ভুলে গেছেন?",
-        "login_button": "লগইন",
+        "login_artisan_button": "কারিগর হিসাবে লগইন করুন",
+        "login_buyer_button": "ক্রেতা হিসাবে লগইন করুন",
         "signup_link": "একটি অ্যাকাউন্ট নেই? সাইন আপ করুন"
     },
     "signup_page": {
@@ -53,7 +54,10 @@
         "confirm_password_label": "পাসওয়ার্ড নিশ্চিত করুন",
         "create_account_button": "অ্যাকাউন্ট তৈরি করুন",
         "login_link": "ইতিমধ্যে একটি অ্যাকাউন্ট আছে? লগইন করুন",
-        "legal_disclaimer": "একটি অ্যাকাউন্ট তৈরি করে, আপনি আমাদের শর্তাবলীতে সম্মত হন। অবৈধ কার্যকলাপ আইনি পদক্ষেপের কারণ হতে পারে।"
+        "legal_disclaimer": "একটি অ্যাকাউন্ট তৈরি করে, আপনি আমাদের শর্তাবলীতে সম্মত হন। অবৈধ কার্যকলাপ আইনি পদক্ষেপের কারণ হতে পারে।",
+        "role_label": "আপনার ভূমিকা চয়ন করুন",
+        "role_artisan": "কারিগর",
+        "role_buyer": "ক্রেতা"
     },
     "dashboard_layout": {
         "menu_dashboard": "ড্যাশবোর্ড",
