--- a/src/lib/locales/hi.json
+++ b/src/lib/locales/hi.json
@@ -3,7 +3,7 @@
     "homepage": {
         "title": "AI के साथ अपनी कला को सशक्त बनाएं",
         "subtitle": "आर्टिसन आपको अपनी अनूठी रचनाओं का वर्णन करने, सुनाने और बेचने में मदद करने के लिए बुद्धिमान उपकरण प्रदान करता है। अपनी कला पर ध्यान केंद्रित करें, हम शब्दों को संभाल लेंगे। कारीगरों के लिए मंच पूरी तरह से मुफ्त है।",
-        "artisans_button": "बनाना शुरू करें",
+        "artisans_button": "अपनी यात्रा शुरू करें",
         "login": "लॉग इन करें",
         "signup": "साइन अप करें",
         "features_title": "आधुनिक कारीगर के लिए सुविधाएँ",
@@ -36,7 +36,8 @@
         "form_placeholder": "कारीगर_प्रिया / m@example.com / 9876543210",
         "password_label": "पासवर्ड",
         "forgot_password": "अपना पासवर्ड भूल गए?",
-        "login_button": "लॉग इन करें",
+        "login_artisan_button": "कारीगर के रूप में लॉग इन करें",
+        "login_buyer_button": "खरीदार के रूप में लॉग इन करें",
         "signup_link": "खाता नहीं है? साइन अप करें"
     },
     "signup_page": {
@@ -53,7 +54,10 @@
         "confirm_password_label": "पासवर्ड की पुष्टि करें",
         "create_account_button": "खाता बनाएं",
         "login_link": "पहले से ही एक खाता है? लॉग इन करें",
-        "legal_disclaimer": "खाता बनाकर, आप हमारी शर्तों से सहमत होते हैं। अवैध गतिविधि पर कानूनी कार्रवाई हो सकती है।"
+        "legal_disclaimer": "खाता बनाकर, आप हमारी शर्तों से सहमत होते हैं। अवैध गतिविधि पर कानूनी कार्रवाई हो सकती है।",
+        "role_label": "अपनी भूमिका चुनें",
+        "role_artisan": "कारीगर",
+        "role_buyer": "खरीदार"
     },
     "dashboard_layout": {
         "menu_dashboard": "डैशबोर्ड",
