--- a/src/lib/locales/ta.json
+++ b/src/lib/locales/ta.json
@@ -3,7 +3,7 @@
     "homepage": {
         "title": "உங்கள் கைவினைக்கு AI மூலம் சக்தி அளியுங்கள்",
         "subtitle": "Artisan உங்கள் தனித்துவமான படைப்புகளை விவரிக்கவும், விவரிக்கவும் மற்றும் விற்கவும் உதவும் புத்திசாலித்தனமான கருவிகளை வழங்குகிறது. உங்கள் கலையில் கவனம் செலுத்துங்கள், நாங்கள் வார்த்தைகளைக் கையாளுவோம். கைவினைஞர்களுக்கு இந்த தளம் முற்றிலும் இலவசம்.",
-        "artisans_button": "உருவாக்கத் தொடங்குங்கள்",
+        "artisans_button": "உங்கள் பயணத்தைத் தொடங்குங்கள்",
         "login": "உள்நுழை",
         "signup": "பதிவுபெறு",
         "features_title": "நவீன கைவினைஞருக்கான அம்சங்கள்",
@@ -36,7 +36,8 @@
         "form_placeholder": "artisan_priya / m@example.com / 9876543210",
         "password_label": "கடவுச்சொல்",
         "forgot_password": "உங்கள் கடவுச்சொல்லை மறந்துவிட்டீர்களா?",
-        "login_button": "உள்நுழை",
+        "login_artisan_button": "கைவினைஞராக உள்நுழைக",
+        "login_buyer_button": "வாங்குபவராக உள்நுழைக",
         "signup_link": "கணக்கு இல்லையா? பதிவுபெறு"
     },
     "signup_page": {
@@ -53,7 +54,10 @@
         "confirm_password_label": "கடவுச்சொல்லை உறுதிப்படுத்தவும்",
         "create_account_button": "கணக்கை உருவாக்கவும்",
         "login_link": "ஏற்கனவே கணக்கு உள்ளதா? உள்நுழைக",
-        "legal_disclaimer": "கணக்கை உருவாக்குவதன் மூலம், எங்கள் விதிமுறைகளை ஏற்கிறீர்கள். சட்டவிரோத செயல்பாடு சட்ட நடவடிக்கைக்கு வழிவகுக்கும்."
+        "legal_disclaimer": "கணக்கை உருவாக்குவதன் மூலம், எங்கள் விதிமுறைகளை ஏற்கிறீர்கள். சட்டவிரோத செயல்பாடு சட்ட நடவடிக்கைக்கு வழிவகுக்கும்.",
+        "role_label": "உங்கள் பாத்திரத்தைத் தேர்வுசெய்க",
+        "role_artisan": "கைவினைஞர்",
+        "role_buyer": "வாங்குபவர்"
     },
     "dashboard_layout": {
         "menu_dashboard": "டாஷ்போர்டு",
