--- a/src/lib/locales/te.json
+++ b/src/lib/locales/te.json
@@ -3,7 +3,7 @@
     "homepage": {
         "title": "మీ కళను AIతో శక్తివంతం చేయండి",
         "subtitle": "ఆర్టిసాన్ మీ ప్రత్యేకమైన సృష్టిలను వివరించడానికి, కథనం చేయడానికి మరియు విక్రయించడానికి మీకు సహాయపడటానికి తెలివైన సాధనాలను అందిస్తుంది. మీ కళపై దృష్టి పెట్టండి, మేము పదాలను నిర్వహిస్తాము. కళాకారులకు వేదిక పూర్తిగా ఉచితం.",
-        "artisans_button": "సృష్టించడం ప్రారంభించండి",
+        "artisans_button": "మీ ప్రయాణాన్ని ప్రారంభించండి",
         "login": "లాగిన్",
         "signup": "సైన్ అప్ చేయండి",
         "features_title": "ఆధునిక కళాకారుడి కోసం ఫీచర్లు",
@@ -36,7 +36,8 @@
         "form_placeholder": "artisan_priya / m@example.com / 9876543210",
         "password_label": "పాస్‌వర్డ్",
         "forgot_password": "మీ పాస్‌వర్డ్‌ను మర్చిపోయారా?",
-        "login_button": "లాగిన్",
+        "login_artisan_button": "కళాకారుడిగా లాగిన్ చేయండి",
+        "login_buyer_button": "కొనుగోలుదారుగా లాగిన్ చేయండి",
         "signup_link": "ఖాతా లేదా? సైన్ అప్ చేయండి"
     },
     "signup_page": {
@@ -53,7 +54,10 @@
         "confirm_password_label": "పాస్‌వర్డ్‌ను నిర్ధారించండి",
         "create_account_button": "ఖాతాను సృష్టించండి",
         "login_link": "ఇప్పటికే ఖాతా ఉందా? లాగిన్",
-        "legal_disclaimer": "ఖాతాను సృష్టించడం ద్వారా, మీరు మా నిబంధనలను అంగీకరిస్తున్నారు. చట్టవిరుద్ధమైన కార్యకలాపాలు చట్టపరమైన చర్యలకు దారితీయవచ్చు."
+        "legal_disclaimer": "ఖాతాను సృష్టించడం ద్వారా, మీరు మా నిబంధనలను అంగీకరిస్తున్నారు. చట్టవిరుద్ధమైన కార్యకలాపాలు చట్టపరమైన చర్యలకు దారితీయవచ్చు.",
+        "role_label": "మీ పాత్రను ఎంచుకోండి",
+        "role_artisan": "కళాకారుడు",
+        "role_buyer": "కొనుగోలుదారు"
     },
     "dashboard_layout": {
         "menu_dashboard": "డాష్‌బోర్డ్",
