--- a/src/lib/locales/ur.json
+++ b/src/lib/locales/ur.json
@@ -19,7 +19,7 @@
         "art_title": "اگلی نسل کے لیے عصری ہندوستانی فن",
         "art_subtitle": "جدید ہندوستانی فنکاروں کو دریافت کریں جو ایک تازہ، متحرک نقطہ نظر کے ساتھ روایت کی نئی تعریف کر رہے ہیں۔",
         "art_1_title": "ڈیجیٹل افسانہ",
-        "art_1_desc": "قدیم کہانیاں ڈیجیٹل चित्रण کے ذریعے دوبارہ بیان کی گئیں، महाकाव्य कथाओं को आधुनिक सौंदर्यशास्त्र کے ساتھ मिलाते हुए۔",
+        "art_1_desc": "قدیم کہانیاں ڈیجیٹل चित्रण کے ذریعے دوبارہ بیان کی گئیں، महाकाव्य कथाओं को आधुनिक सौंदर्यशास्त्र کے ساتھ मिलाते ہوئے۔",
         "art_2_title": "انڈین اسٹریٹ آرٹ فیوژن",
         "art_2_desc": "ہندوستانی نقشوں سے مزین گرافٹی اور سٹینسل آرٹ، شہری کینوس پر بولڈ بیانات تخلیق کرتے ہیں۔",
         "art_3_title": "کم سے کم لوک",
@@ -36,7 +36,8 @@
         "form_placeholder": "artisan_priya / m@example.com / 9876543210",
         "password_label": "پاس ورڈ",
         "forgot_password": "اپنا پاس ورڈ بھول گئے؟",
-        "login_button": "لاگ ان کریں",
+        "login_artisan_button": "کاریگر کے طور پر لاگ ان کریں",
+        "login_buyer_button": "خریدار کے طور پر لاگ ان کریں",
         "signup_link": "اکاؤنٹ نہیں ہے؟ سائن اپ کریں"
     },
     "signup_page": {
@@ -53,7 +54,10 @@
         "confirm_password_label": "پاس ورڈ کی تصدیق کریں",
         "create_account_button": "اکاؤنٹ بنائیں",
         "login_link": "پہلے سے ہی ایک اکاؤنٹ ہے؟ لاگ ان کریں۔",
-        "legal_disclaimer": "ایک اکاؤنٹ بنا کر، آپ ہماری شرائط سے اتفاق کرتے ہیں۔ غیر قانونی سرگرمی قانونی کارروائی کا باعث بن سکتی ہے۔"
+        "legal_disclaimer": "ایک اکاؤنٹ بنا کر، آپ ہماری شرائط سے اتفاق کرتے ہیں۔ غیر قانونی سرگرمی قانونی کارروائی کا باعث بن سکتی ہے۔",
+        "role_label": "اپنا کردار منتخب کریں",
+        "role_artisan": "کاریگر",
+        "role_buyer": "خریدار"
     },
     "dashboard_layout": {
         "menu_dashboard": "ڈیش بورڈ",
