--- a/src/lib/locales/mr.json
+++ b/src/lib/locales/mr.json
@@ -3,7 +3,7 @@
     "homepage": {
         "title": "तुमच्या कलेला AI ने सशक्त करा",
         "subtitle": "आर्टिसन तुम्हाला तुमच्या अद्वितीय निर्मितीचे वर्णन करण्यास, कथन करण्यास आणि विकण्यास मदत करण्यासाठी बुद्धिमान साधने प्रदान करते. तुमच्या कलेवर लक्ष केंद्रित करा, आम्ही शब्द हाताळू. कलाकारांसाठी हे प्लॅटफॉर्म पूर्णपणे विनामूल्य आहे.",
-        "artisans_button": "तयार करणे सुरू करा",
+        "artisans_button": "तुमचा प्रवास सुरू करा",
         "login": "लॉगिन",
         "signup": "साइन अप",
         "features_title": "आधुनिक कलाकारांसाठी वैशिष्ट्ये",
@@ -36,7 +36,8 @@
         "form_placeholder": "artisan_priya / m@example.com / 9876543210",
         "password_label": "पासवर्ड",
         "forgot_password": "तुमचा पासवर्ड विसरलात?",
-        "login_button": "लॉगिन",
+        "login_artisan_button": "कलाकार म्हणून लॉगिन करा",
+        "login_buyer_button": "खरेदीदार म्हणून लॉगिन करा",
         "signup_link": "खाते नाही? साइन अप करा"
     },
     "signup_page": {
@@ -53,7 +54,10 @@
         "confirm_password_label": "पासवर्डची पुष्टी करा",
         "create_account_button": "खाते तयार करा",
         "login_link": "आधीपासूनच खाते आहे? लॉगिन करा",
-        "legal_disclaimer": "खाते तयार करून, तुम्ही आमच्या अटींना सहमती देता. बेकायदेशीर কার্যকলাপामुळे कायदेशीर कारवाई होऊ शकते."
+        "legal_disclaimer": "खाते तयार करून, तुम्ही आमच्या अटींना सहमती देता. बेकायदेशीर কার্যকলাপामुळे कायदेशीर कारवाई होऊ शकते.",
+        "role_label": "तुमची भूमिका निवडा",
+        "role_artisan": "कलाकार",
+        "role_buyer": "खरेदीदार"
     },
     "dashboard_layout": {
         "menu_dashboard": "डॅशबोर्ड",
