use word seller instead of atrsian in the login page

--- a/src/lib/locales/bn.json
+++ b/src/lib/locales/bn.json
@@ -36,7 +36,7 @@
         "form_placeholder": "artisan_priya / m@example.com / 9876543210",
         "password_label": "পাসওয়ার্ড",
         "forgot_password": "আপনার পাসওয়ার্ড ভুলে গেছেন?",
-        "login_artisan_button": "কারিগর হিসাবে লগইন করুন",
+        "login_seller_button": "বিক্রেতা হিসাবে লগইন করুন",
         "login_buyer_button": "ক্রেতা হিসাবে লগইন করুন",
         "signup_link": "একটি অ্যাকাউন্ট নেই? সাইন আপ করুন"
     },
@@ -156,7 +156,7 @@
         "ask_ai_button": "AI কে জিজ্ঞাসা করুন",
         "asking_button": "জিজ্ঞাসা করা হচ্ছে...",
         "ai_assistant_title": "AI সহকারী",
-        "ai_assistant_desc": "আপনার প্রশ্নের উত্তর এখানে।",
+        "ai_assistant_desc": "আপনার প্রশ্নের উত্তর 여기।",
         "thinking": "ভাবছে...",
         "no_query_title": "কোন প্রশ্ন প্রদান করা হয়নি",
         "no_query_desc": "জমা দেওয়ার আগে দয়া করে আপনার প্রশ্ন লিখুন।",
@@ -195,7 +195,7 @@
         "empty_title": "আপনার কার্ট খালি",
         "empty_description": "মনে হচ্ছে আপনি এখনও কোনো আইটেম যোগ করেননি। আপনি যা পছন্দ করেন তা খুঁজে পেতে অন্বেষণ শুরু করুন!",
         "summary_title": "অর্ডার সারসংক্ষেপ",
-        "summary_description": "চেক আউট করার আগে আপনার অর্ডার পর্যালোচনা করুন।",
+        "summary_description": "চেک আউট করার আগে আপনার অর্ডার পর্যালোচনা করুন।",
         "subtotal": "উপমোট",
         "shipping": "শিপিং",
         "total": "মোট",
