--- a/src/lib/locales/mr.json
+++ b/src/lib/locales/mr.json
@@ -36,7 +36,7 @@
         "form_placeholder": "artisan_priya / m@example.com / 9876543210",
         "password_label": "पासवर्ड",
         "forgot_password": "तुमचा पासवर्ड विसरलात?",
-        "login_artisan_button": "कलाकार म्हणून लॉगिन करा",
+        "login_seller_button": "विक्रेता म्हणून लॉगिन करा",
         "login_buyer_button": "खरेदीदार म्हणून लॉगिन करा",
         "signup_link": "खाते नाही? साइन अप करा"
     },
@@ -181,7 +181,7 @@
                 },
                 {
                     "question": "मी इतर कलाकारांशी संवाद साधू शकतो का?",
-                    "answer": "होय! 'कम्युनिटी हब' हे तुमच्यासाठी प्लॅटफॉर्मवरील इतर कलाकारांशी कनेक्ट होण्यासाठी, कल्पना सामायिक करण्यासाठी आणि सहयोग करण्यासाठी एक ठिकाण आहे."
+                    "answer": "होय! 'कम्युनिटी हब' हे तुमच्यासाठी प्लॅטफॉर्मवरील इतर कलाकारांशी कनेक्ट होण्यासाठी, कल्पना सामायिक करण्यासाठी आणि सहयोग करण्यासाठी एक ठिकाण आहे."
                 },
                 {
                     "question": "लाइव्ह जाण्यासाठी मला माझे खाते का सत्यापित करावे लागेल?",
