--- a/src/lib/locales/ta.json
+++ b/src/lib/locales/ta.json
@@ -36,7 +36,7 @@
         "form_placeholder": "artisan_priya / m@example.com / 9876543210",
         "password_label": "கடவுச்சொல்",
         "forgot_password": "உங்கள் கடவுச்சொல்லை மறந்துவிட்டீர்களா?",
-        "login_artisan_button": "கைவினைஞராக உள்நுழைக",
+        "login_seller_button": "விற்பனையாளராக உள்நுழைக",
         "login_buyer_button": "வாங்குபவராக உள்நுழைக",
         "signup_link": "கணக்கு இல்லையா? பதிவுபெறு"
     },
@@ -196,7 +196,7 @@
         "empty_description": "நீங்கள் இன்னும் எந்த பொருட்களையும் சேர்க்கவில்லை என்று தெரிகிறது. நீங்கள் விரும்பும் ஒன்றைக் கண்டுபிடிக்க ஆராயத் தொடங்குங்கள்!",
         "summary_title": "ஆர்டர் சுருக்கம்",
         "summary_description": "செக் அவுட் செய்வதற்கு முன் உங்கள் ஆர்டரை மதிப்பாய்வு செய்யவும்.",
-        "subtotal": "துணை మొత్తం",
+        "subtotal": "துணை மொத்தம்",
         "shipping": "ஷிப்பிங்",
         "total": "மொத்தம்",
         "checkout_button": "செக் அவுட்டிற்குச் செல்லவும்"
