--- a/src/lib/locales/ur.json
+++ b/src/lib/locales/ur.json
@@ -36,7 +36,7 @@
         "form_placeholder": "artisan_priya / m@example.com / 9876543210",
         "password_label": "پاس ورڈ",
         "forgot_password": "اپنا پاس ورڈ بھول گئے؟",
-        "login_artisan_button": "کاریگر کے طور پر لاگ ان کریں",
+        "login_seller_button": "بیچنے والے کے طور پر لاگ ان کریں",
         "login_buyer_button": "خریدار کے طور پر لاگ ان کریں",
         "signup_link": "اکاؤنٹ نہیں ہے؟ سائن اپ کریں"
     },
