--- a/src/lib/locales/hi.json
+++ b/src/lib/locales/hi.json
@@ -45,7 +45,7 @@
         "description": "अद्वितीय शिल्प बेचना या खरीदना शुरू करने के लिए आर्टिसन से जुड़ें।",
         "avatar_label": "एक प्रोफ़ाइल चित्र अपलोड करें",
         "username_label": "उपयोगकर्ता नाम",
-        "username_placeholder": "उदा., ArtisanPriya",
+        "username_placeholder": "उदा., SellerPriya",
         "email_label": "ईमेल",
         "email_placeholder": "m@example.com",
         "phone_label": "फ़ोन नंबर",
@@ -56,7 +56,7 @@
         "login_link": "पहले से ही एक खाता है? लॉग इन करें",
         "legal_disclaimer": "खाता बनाकर, आप हमारी शर्तों से सहमत होते हैं। अवैध गतिविधि पर कानूनी कार्रवाई हो सकती है।",
         "role_label": "अपनी भूमिका चुनें",
-        "role_artisan": "कारीगर",
+        "role_seller": "विक्रेता",
         "role_buyer": "खरीदार"
     },
     "dashboard_layout": {
