--- a/src/lib/locales/mr.json
+++ b/src/lib/locales/mr.json
@@ -45,7 +45,7 @@
         "description": "अद्वितीय हस्तकला विकणे किंवा खरेदी करणे सुरू करण्यासाठी आर्टिसनमध्ये सामील व्हा.",
         "avatar_label": "एक प्रोफाइल चित्र अपलोड करा",
         "username_label": "वापरकर्तानाव",
-        "username_placeholder": "उदा. ArtisanPriya",
+        "username_placeholder": "उदा. SellerPriya",
         "email_label": "ईमेल",
         "email_placeholder": "m@example.com",
         "phone_label": "फोन नंबर",
@@ -56,7 +56,7 @@
         "login_link": "आधीपासूनच खाते आहे? लॉगिन करा",
         "legal_disclaimer": "खाते तयार करून, तुम्ही आमच्या अटींना सहमती देता. बेकायदेशीर কার্যকলাপामुळे कायदेशीर कारवाई होऊ शकते.",
         "role_label": "तुमची भूमिका निवडा",
-        "role_artisan": "कलाकार",
+        "role_seller": "विक्रेता",
         "role_buyer": "खरेदीदार"
     },
     "dashboard_layout": {
@@ -181,7 +181,7 @@
                 },
                 {
                     "question": "मी इतर कलाकारांशी संवाद साधू शकतो का?",
-                    "answer": "होय! 'कम्युनिटी हब' हे तुमच्यासाठी प्लॅטफॉर्मवरील इतर कलाकारांशी कनेक्ट होण्यासाठी, कल्पना सामायिक करण्यासाठी आणि सहयोग करण्यासाठी एक ठिकाण आहे."
+                    "answer": "होय! 'कम्युनिटी हब' हे तुमच्यासाठी प्लॅटफॉर्मवरील इतर कलाकारांशी कनेक्ट होण्यासाठी, कल्पना सामायिक करण्यासाठी आणि सहयोग करण्यासाठी एक ठिकाण आहे."
                 },
                 {
                     "question": "लाइव्ह जाण्यासाठी मला माझे खाते का सत्यापित करावे लागेल?",
