--- a/src/lib/locales/ur.json
+++ b/src/lib/locales/ur.json
@@ -9,7 +9,7 @@
         "features_title": "جدید کاریگر کے لیے خصوصیات",
         "features_subtitle": "تصویر سے کہانی تک، ہمارا AI آپ کے کام کی روح کو ظاہر کرنے کے لیے تربیت یافتہ ہے۔",
         "feature_1_title": "AI تصویری تجزیہ",
-        "feature_1_desc": "ایک تصویر اپ لوڈ کریں اور فوری طور پر ایک زبردست تفصیل اور ٹیگز حاصل کریں۔",
+        "feature_1_desc": "ایک تصویر اپ لوڈ کریں اور فوری طور पर ایک زبردست تفصیل اور ٹیگز حاصل کریں۔",
         "feature_2_title": "آواز سے کہانی",
         "feature_2_desc": "اپنی کہانی سنائیں، اور ہمارا AI اسے ایک دلکش داستان میں بہتر بنائے گا۔",
         "feature_3_title": "سمارٹ تجزیات",
@@ -45,7 +45,7 @@
         "description": "منفرد دستکاری بیچنے یا خریدنے کے لیے آرٹیسن میں شامل ہوں۔",
         "avatar_label": "ایک پروفائل تصویر اپ لوڈ کریں",
         "username_label": "صارف نام",
-        "username_placeholder": "مثلاً ArtisanPriya",
+        "username_placeholder": "مثلاً SellerPriya",
         "email_label": "ای میل",
         "email_placeholder": "m@example.com",
         "phone_label": "فون نمبر",
@@ -56,7 +56,7 @@
         "login_link": "پہلے سے ہی ایک اکاؤنٹ ہے؟ لاگ ان کریں۔",
         "legal_disclaimer": "ایک اکاؤنٹ بنا کر، آپ ہماری شرائط سے اتفاق کرتے ہیں۔ غیر قانونی سرگرمی قانونی کارروائی کا باعث بن سکتی ہے۔",
         "role_label": "اپنا کردار منتخب کریں",
-        "role_artisan": "کاریگر",
+        "role_seller": "بیچنے والے",
         "role_buyer": "خریدار"
     },
     "dashboard_layout": {
@@ -197,9 +197,9 @@
         "card_description": "ہم آپ کے ان پٹ کی قدر کرتے ہیں۔ آپ کے ذہن میں کیا ہے؟",
         "placeholder": "مثال کے طور پر، 'کاش فنکاروں کے پورٹ فولیو بنانے کا کوئی طریقہ ہوتا...'",
         "button": "AI کے ساتھ فیڈ بیک کا تجزیہ کریں",
-        "analyzing": "تجزیہ کیا جا رہا ہے...",
+        "analyzing": "تجزیہ کیا جا रहा ہے...",
         "analysis_title": "AI فیڈ بیک تجزیہ",
-        "analysis_description": "ہمارا AI اس فیڈ بیک کے بارے میں کیا سوچتا ہے وہ یہ ہے۔",
+        "analysis_description": "ہمارا AI اس فیڈ بیک کے بارے में کیا سوچتا ہے وہ یہ ہے۔",
         "summary_title": "خلاصہ",
         "no_feedback_title": "کوئی فیڈ بیک فراہم نہیں کیا گیا",
         "no_feedback_description": "براہ کرم جمع کرانے سے پہلے اپنی تجویز درج کریں۔",
